[project]
name = "comfyui-save-image-watermark"
description = "ComfyUI custom node for directly downloading generated images to your local PC with customizable filenames and formats (PNG/JPEG)."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/aicuai/comfyui-save-image-watermark"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kaitas"
DisplayName = "ComfyUI Local Save Node with watermark"
Icon = ""