[project]
name = "comfyui-save-image-watermark"
description = "Save images with visible watermarks (logo/text), invisible watermarks (LSB steganography), and metadata embedding. Supports PNG/JPEG/WebP with browser download."
version = "1.1.1"
license = {file = "LICENSE"}
dependencies = []
keywords = ["comfyui", "watermark", "steganography", "lsb", "image", "save"]

[project.urls]
Repository = "https://github.com/aicuai/comfyui-save-image-watermark"
# Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "aki"
DisplayName = "Save Image with Watermark"
Icon = "🍉"